# ejdic

./: README.md  ejdic.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
