name:                ejdic
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ishiy1993/ejdic#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , xml-lens
  default-language:    Haskell2010

executable ejd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ejdic
  default-language:    Haskell2010

test-suite ejdic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ejdic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ishiy1993/ejdic
